<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="win.aspring.bookrxandroid.category.AddCategory">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/base_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/category_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_category_id"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_light"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_id"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_category_name"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_light"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/category_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_category_desc"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_light"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
