<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="win.aspring.bookrxandroid.books.AddBook">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/base_toolbar" />

    <LinearLayout
        android:id="@+id/ll_category_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="请选择分类："
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_size_16" />

        <Spinner
            android:id="@+id/book_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/book_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_category_id"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_book_code"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_light"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_code"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_book_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_light"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/book_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_book_publisher"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_light"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_publisher"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_book_author"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_light"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
